Fix for keyboard scrolling & minor CSS changes

--- a/app/src/renderer/styles/theme-dark/_fixes.scss
+++ b/app/src/renderer/styles/theme-dark/_fixes.scss
@@ -189,3 +189,12 @@ html.dark-mode .coreSpriteMobileNavSettings {
 html.dark-mode ._tf9x3 {
   color: $bright;
 }
+
+/*Grid background*/
+html.dark-mode ._eskl6 {
+  background: $dark;
+}
+
+html.dark-mode ._s6yvg {
+  border-color: $darkLight;
+}
