--- a/app/src/renderer/styles/core/_fixes.scss
+++ b/app/src/renderer/styles/core/_fixes.scss
@@ -1,18 +1,24 @@
-/* Scrollbar - currently hidden */
+/* Scrollbar */
 
-::-webkit-scrollbar {
-  width: 2px;
-  display: none;
+html::-webkit-scrollbar {
+  width: 8px;
 }
 
-::-webkit-scrollbar-track {
-  background-color: #fafafa;
+html::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #000;
+html::-webkit-scrollbar-thumb {
+  background-color: #cbc9c9;
 }
 
+html::-webkit-scrollbar-thumb:hover {
+  background-color: #b0b0b0;
+}
+
+html::-webkit-scrollbar-thumb:active {
+  background-color: #9e9e9e;
+}
 
 /* Remove focus glow */
 
