--- a/app/src/renderer/styles/theme-dark/_profile.scss
+++ b/app/src/renderer/styles/theme-dark/_profile.scss
@@ -5,7 +5,6 @@ html.dark-mode #react-root ._aj7mu._a89os {
   border-color: #303b47;
 }
 
-
 /* load more */
 
 //html.dark-mode #react-root ._1ooyk,
@@ -26,14 +25,14 @@ html.dark-mode #react-root ._1ooyk {
 
 /* username */
 
-html.dark-mode #react-root ._i572c {
+html.dark-mode #react-root ._rf3jb {
   color: $bright;
 }
 
 
 /* name */
 
-html.dark-mode #react-root ._79dar {
+html.dark-mode #react-root ._kc4z2 {
   color: $bright;
 }
 
@@ -52,13 +51,13 @@ html.dark-mode #react-root ._bugdy span {
 }
 
 
-/* followers, following */
+/* posts, followers, following */
 
 html.dark-mode #react-root {
-  ._bkw5z._kjym7,
-  ._s53mj._13vpi,
-  ._bkw5z,
-  ._s53mj {
+  ._fd86t._he56w,
+  ._fd86t._he56w,
+  ._fd86t._he56w,
+  ._qv64e._t78yp._4tgw8._njrw0 {
     color: $bright;
   }
 }
@@ -66,7 +65,12 @@ html.dark-mode #react-root {
 
 /* follow/following/edit profile buttons */
 
-html.dark-mode #react-root ._dzx3o {
+html.dark-mode #react-root ._qv64e._t78yp._r9b8f._njrw0 {
+  color: $bright;
+}
+
+/* Load More button */
+html.dark-mode #react-root ._1cr2e._epyes {
   color: $bright;
 }
 
@@ -80,29 +84,34 @@ html.dark-mode #react-root ._8gpiy {
 
 /* Private profile */
 
-html.dark-mode #react-root ._76rrx {
-  background-color: $darkLight;
-  border: none;
-}
+html.dark-mode #react-root {
+  ._q8pf2._r1mv3 {
+    background-color: $darkLight;
+    border: none;
+  }
 
-html.dark-mode #react-root ._76rrx h2,
-html.dark-mode #react-root ._76rrx p {
-  color: $bright;
+  ._q8pf2._r1mv3 {
+    h2, p {
+      color: $bright;
+    }
+  }
 }
 
 
 /*Suggested*/
 
-html.dark-mode #react-root ._3p78u._28ejm._go7te._pn9fv::before {
-  background-color: $dark;
-  border-left: 1px solid rgba(80, 80, 80, .2);
-  border-top: 1px solid rgba(80, 80, 80, .2);
-}
+html.dark-mode #react-root {
+  ._gwyj6._66ugs._7djd0._dah1q._hqhuc::before,
+  ._gwyj6._66ugs._7djd0._dah1q._hqhuc {
+    background-color: $dark;
+    border-left: 1px solid rgba(80, 80, 80, .2);
+    border-top: 1px solid rgba(80, 80, 80, .2);
+  }
 
-html.dark-mode #react-root ._3p78u._28ejm._go7te._pn9fv {
-  background-color: $dark;
-  border-top: 1px solid rgba(80, 80, 80, .2);
-  border-bottom: 1px solid rgba(80, 80, 80, .2);
+  ._gwyj6._66ugs._7djd0._dah1q._hqhuc div {
+    background-color: $dark;
+    border-color: rgba(80, 80, 80, .2);
+  }
 }
 
 
@@ -140,15 +149,15 @@ html.dark-mode #react-root ._379kp {
 
 /* text */
 
-html.dark-mode #react-root ._auspy {
+html.dark-mode #react-root ._b96u5 {
   color: $bright;
 }
 
 
 /* border */
 
-html.dark-mode #react-root ._mkiio::after {
-  border-color: $darkLight;
+html.dark-mode #react-root ._75ljm._3qhgf::after {
+  border-color: $dark;
 }
 
 
@@ -156,12 +165,12 @@ html.dark-mode #react-root ._mkiio::after {
  * Tableviews (Following, Followers)
  */
 
-html.dark-mode #react-root ._q44m8 {
+html.dark-mode #react-root ._lfwfo {
   background-color: $dark;
   color: $bright;
 }
 
-html.dark-mode #react-root ._cx1ua {
+html.dark-mode #react-root ._q2d5a._b9n99 {
   background-color: $dark;
   border-color: $darkLight;
 }
@@ -171,66 +180,54 @@ html.dark-mode #react-root ._cx1ua {
  * Edit profile page
  */
 
-html.dark-mode #react-root ._40h7m {
-  background-color: $dark;
-}
-
-
 /* Settings */
 
-html.dark-mode #react-root ._jkiz5 {
-  background-color: $dark;
-  ._kn3uh {
-    background-color: $darkLight;
-    border-color: $gray;
-    span,
-    a {
-      color: $blue;
+html.dark-mode #react-root {
+  ._rqmce, ._rqmce div {
+    background-color: $dark;
+    border-color: $darkLight;
+  }
+
+  ._rqmce span {
+    color: $white;
+  }
+}
+
+/* Edit Profile */
+
+html.dark-mode #react-root {
+  ._75z9k {
+    background-color: $dark;
+  }
+
+  ._75z9k label {
+    color: white;
+  }
+}
+
+/* Report Problem */
+
+html.dark-mode {
+  ._rx4nb {
+    background-color: $dark;
+  }
+
+  ._rx4nb {
+    h1, p, ._qv64e._t78yp._4tgw8._njrw0 {
+      color: $bright;
     }
   }
-  ._81dcm {
+}
+
+/* Locations */
+
+html.dark-mode #react-root ._775gj {
+  ._cem40 {
+    background-color: $dark;
+  }
+
+  ._brnf8 {
     border-color: $gray;
+    background-color: $darkLight;
   }
-}
-
-html.dark-mode #react-root ._e5cd3 {
-  h2._aoi9w,
-  p._m2kht,
-  h2._bgfey,
-  div._j0kjj,
-  div._8unkm {
-    color: $bright;
-  }
-}
-
-
-/* label */
-
-html.dark-mode #react-root ._891mt {
-  color: $bright;
-}
-
-
-/* private label */
-
-html.dark-mode #react-root ._bgfey {
-  color: $gray;
-}
-
-
-/* inputs */
-html.dark-mode #react-root {
-  ._2j83n, ._9pfjt, ._g6a4a,._cmoxu ._qy55y,
-  ._1n8j5._qy55y {
-    background-color: #303b47;
-    border: none;
-    color: $bright;
-  }
-}
-
-
-/* terms */
-
-html.dark-mode #react-root ._lxlnj {
-  color: $bright;
 }
