Started creating app components and added fonts
Signed-off-by: Anatoli Nicolae <nicolaeanatoli@gmail.com>

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -1,5 +1,6 @@
 @import '~element-ui/lib/theme-default/index.css';
 @import 'https://fonts.googleapis.com/css?family=Space+Mono';
+@import 'fonts.css';
 
 * {
   box-sizing: border-box;
