Basic playtime & learning
Signed-off-by: Anatoli Nicolae <nicolaeanatoli@gmail.com>

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -1,5 +1,4 @@
 @import '~element-ui/lib/theme-default/index.css';
-@import 'https://fonts.googleapis.com/css?family=Space+Mono';
 @import 'fonts.css';
 
 * {
@@ -9,6 +8,6 @@
 }
 
 body {
-  font-family: 'Space Mono', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-app-region: drag;
 }
