Basic login and profile implementation
Session-based login and profile implementation using Private API

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -9,5 +9,12 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  -webkit-app-region: drag;
+}
+
+.sidebar {
+	/* -webkit-app-region: drag; */
+}
+
+.avatar img {
+	border-radius: 64px;
 }
