New sidebar style and added feed in home :sunglasses:

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -1,6 +1,10 @@
 @import '~element-ui/lib/theme-default/index.css';
 @import 'fonts.css';
 
+@import 'light/colors';
+@import 'light/system';
+@import 'light/sidebar';
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,14 +15,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.sidebar {
-	/* -webkit-app-region: drag; */
-}
-
 .avatar img {
 	border-radius: 64px;
-}
-
-.wrapper {
-  padding: 1em;
 }
