Added nicer icons and fixed Vuex store
Changed webfont to SVG icons from Icon 54 pack with outlined and filled icons, better modularization of Vuex store and added a minor fix for window buttons

Signed-off-by: Anatoli Nicolae <nicolaeanatoli@gmail.com>

--- a/src/renderer/assets/styles/app.less
+++ b/src/renderer/assets/styles/app.less
@@ -1,7 +1,7 @@
 @import '~element-ui/lib/theme-default/index.css';
-@import 'fonts.css';
 
-@import 'light/colors';
+@import 'common/colors';
+@import 'common/icons';
 @import 'light/system';
 @import 'light/sidebar';
 
@@ -13,8 +13,4 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-}
-
-.avatar img {
-	border-radius: 64px;
 }
