--- a/src/renderer/assets/styles/common/icons.less
+++ b/src/renderer/assets/styles/common/icons.less
@@ -1,6 +1,4 @@
 [class^="icon-"], [class*=" icon-"] {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   width: 1em;
   height: 1em;
   background-repeat: no-repeat;
@@ -64,4 +62,11 @@
 .router-link-exact-active .icon-profile.gender-2,
 .router-link-exact-active .icon-profile-filled.gender-2 {
   background-image: url('../../images/profile-gender-2-filled.svg');
+}
+
+.icon-settings {
+  background-image: url('../../images/settings.svg');
+}
+.icon-settings-filled {
+  background-image: url('../../images/settings-filled.svg');
 }
