--- a/src/renderer/assets/styles/light/sidebar.less
+++ b/src/renderer/assets/styles/light/sidebar.less
@@ -4,6 +4,11 @@
   -webkit-app-region: drag;
 }
 
+.sidebar {
+  // max-width: 90px;
+  display: inline-block;
+}
+
 .arrow {
   border: solid black;
   border-width: 0 3px 3px 0;
