--- a/src/renderer/assets/styles/light/system.less
+++ b/src/renderer/assets/styles/light/system.less
@@ -1,4 +1,3 @@
-@import '../common/mixins';
 @import '../common/colors';
 
 .system-ui {
@@ -18,7 +17,7 @@
     opacity: .75;
     position: relative;
     -webkit-app-region: no-drag;
-    .transition(all 250ms);
+    transition: all 250ms;
 
     &.close {
       background-color: @red;
@@ -33,17 +32,17 @@
         left: 2px;
         background: #fff;
         opacity: 0;
-        .transition(all 250ms);
+        transition: all 250ms;
       }
 
       &:hover::before {
         opacity: 1;
-        .transform(rotate(45deg));
+        transform: rotate(45deg);
       }
 
       &:hover::after {
         opacity: 1;
-        .transform(rotate(-45deg));
+        transform: rotate(-45deg);
       }
     }
 
@@ -59,7 +58,7 @@
         left: 3px;
         background: #fff;
         opacity: 0;
-        .transition(all 250ms);
+        transition: all 250ms;
       }
       &:hover::after {
         opacity: 1;
