--- a/src/renderer/assets/styles/common/colors.less
+++ b/src/renderer/assets/styles/common/colors.less
@@ -3,9 +3,18 @@
 @ruby-gapegfruit: #f26968;
 @vernice-verde:   #6cbf84;
 @white-wash:      #ebeced;
+@slate:           #111111;
+@mustard-yellow:  #fff056;
 
 /* Not fancy names */
-@yellow:  @buttercup;
-@red:     @ruby-gapegfruit;
-@green:   @vernice-verde;
-@white:   @white-wash;
+@yellow:          @buttercup;
+@red:             @ruby-gapegfruit;
+@green:           @vernice-verde;
+@white:           @white-wash;
+
+/* Used in app */
+@backgrounds:     @white-wash;
+@main:            @slate;
+@accent:          @vernice-verde;
+@nav-icon:        @main;
+@nav-state:       @accent;
