--- a/src/renderer/assets/styles/light/components/profile.less
+++ b/src/renderer/assets/styles/light/components/profile.less
@@ -5,22 +5,20 @@ header {
 }
 
 .profile {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-column: ~"1 / 5";
+
   .avatar {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 1;
+    grid-column: ~"1 / 2";
 
     img {
-      .border-radius(128px);
+      border-radius: 128px;
     }
   }
 
   .main-infos {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 1;
+    grid-column: ~"2 / 4";
 
     h1 {
       overflow: hidden;
@@ -34,6 +32,23 @@ header {
 }
 
 .biography-box {
-  grid-column: 1;
+  grid-column: ~"1 / 5";
   grid-row: 2;
+}
+
+.counter-box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column: ~"1 / 5";
+  grid-row: 3;
+}
+
+.posts {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+
+  article img {
+    max-width: 100%;
+  }
 }
