--- a/src/renderer/assets/styles/common/icons.less
+++ b/src/renderer/assets/styles/common/icons.less
@@ -34,12 +34,13 @@
   mask-image: url('../../images/upload-filled.svg');
 }
 
-.icon-activity {
+.icon-activity,
+.post-like-heart {
   mask-image: url('../../images/activity.svg');
 }
 .icon-activity-filled,
 .router-link-exact-active .icon-activity,
-.post-like-heart {
+.post-liked-heart {
   mask-image: url('../../images/activity-filled.svg');
 }
 
