--- a/src/renderer/assets/styles/light/index.less
+++ b/src/renderer/assets/styles/light/index.less
@@ -3,6 +3,9 @@
 
 @import './system';
 @import './sidebar';
+
 @import './components/buttons';
+@import './components/avatar';
+
 @import './components/profile';
 @import './components/post';
