--- a/src/renderer/assets/styles/light/components/buttons.less
+++ b/src/renderer/assets/styles/light/components/buttons.less
@@ -1,9 +1,38 @@
-.btn-icon {
+.btn {
+  border-color: #dbdbdb;
+  color: #262626;
+  background: 0 0;
   -webkit-appearance: none;
-  border: none;
-  background: none;
-  line-height: 1;
-  font-size: .5em;
-  padding: .3125em;
-  vertical-align: middle;
+  border-radius: 3px;
+  border-style: solid;
+  border-width: 1px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 26px;
+  outline: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  transition: all 157ms;
+
+  &.btn-icon {
+    -webkit-appearance: none;
+    border: none;
+    background: none;
+    line-height: 1;
+    font-size: 1em;
+    vertical-align: text-bottom;
+
+    & i {
+      vertical-align: middle;
+    }
+  }
+
+  &.btn-default {
+    width: 100%;
+  }
+
+  &:hover {
+    opacity: .7;
+  }
 }
