--- a/src/renderer/assets/styles/light/components/profile.less
+++ b/src/renderer/assets/styles/light/components/profile.less
@@ -1,20 +1,19 @@
-header {
+.user-profile {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  padding: 1em;
 }
 
 .profile {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-column: ~"1 / 5";
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-top: 30px;
+  margin-bottom: 24px;
 
   .avatar {
     grid-column: ~"1 / 2";
-
-    img {
-      border-radius: 128px;
-    }
   }
 
   .main-infos {
@@ -34,13 +33,47 @@ header {
 .biography-box {
   grid-column: ~"1 / 5";
   grid-row: 2;
+
+  .biography {
+    border-bottom: 1px solid #efefef;
+    font-size: 14px;
+    line-height: 17px;
+    margin-bottom: 12px;
+    overflow: hidden;
+    padding: 0 16px 24px;
+    text-overflow: ellipsis;
+
+    h2 {
+      font-size: 14px;
+      display: inline;
+      font-weight: 600;
+    }
+
+    a {
+      font-weight: 600;
+    }
+  }
 }
 
 .counter-box {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-column: ~"1 / 5";
   grid-row: 3;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 12px;
+
+  .counter-item {
+    font-size: 14px;
+    text-align: center;
+    width: 33.3%;
+
+    .counter-number {
+      color: #262626;
+      font-weight: 600;
+      display: block;
+    }
+  }
 }
 
 .posts {
@@ -48,7 +81,9 @@ header {
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
 
-  article img {
-    max-width: 100%;
+  .post-content {
+    width: 100%;
+    height: 120px;
+    background-size: cover;
   }
 }
