Unused modules removal, pagination implementation, little design fixes

--- a/src/renderer/assets/styles/light/components/post.less
+++ b/src/renderer/assets/styles/light/components/post.less
@@ -1,5 +1,11 @@
 .post-grid {
+  .load-more {
+    grid-column: ~"1 / 5";
 
+    .btn {
+      margin: 2em auto;
+    }
+  }
 }
 
 .post-single {
@@ -55,7 +61,7 @@
   }
 
   .post-content {
-    padding: 0 16px;
+    padding: 0 16px 16px;
 
     .post-actions .btn {
       width: 32px;
