--- a/src/renderer/assets/styles/light/components/post.less
+++ b/src/renderer/assets/styles/light/components/post.less
@@ -1,9 +1,20 @@
 .post-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+
+  .post-content {
+    width: 100%;
+    height: 120px;
+    background-size: cover;
+  }
+
   .load-more {
     grid-column: ~"1 / 5";
 
     .btn {
-      margin: 2em auto;
+      margin: 2em;
+      max-width: 80%;
     }
   }
 }
