Fixing multi-image posts and liking animation

--- a/src/renderer/assets/styles/light/components/post.less
+++ b/src/renderer/assets/styles/light/components/post.less
@@ -17,6 +17,15 @@
       max-width: 80%;
     }
   }
+
+  .agile {
+    max-width: 120px;
+    max-height: 120px;
+
+    .slide img {
+      max-height: 120px;
+    }
+  }
 }
 
 .post-single {
@@ -87,4 +96,9 @@
       }
     }
   }
+}
+
+.agile__arrow {
+  bottom: 50%;
+  margin-bottom: -14px;
 }
