--- a/src/renderer/assets/styles/light/components/post.less
+++ b/src/renderer/assets/styles/light/components/post.less
@@ -1,16 +1,13 @@
 .post-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-
   .post-content {
     width: 100%;
     height: 120px;
     background-size: cover;
+    background-position: center center;
   }
 
   .load-more {
-    grid-column: ~"1 / 5";
+    width: 100%;
 
     .btn {
       margin: 2em;
