--- a/app/src/renderer/styles/app.scss
+++ b/app/src/renderer/styles/app.scss
@@ -3,8 +3,8 @@
 @import 'core/variables';
 @import 'core/header';
 @import 'core/fixes';
-@import 'core/404';
+/*@import 'core/404';
 @import 'core/login';
 @import 'core/profile';
 @import 'core/sidebar';
-@import 'core/other';
+@import 'core/other';*/
